<resources>
    <string name="app_name">Magang Internet Banking</string>
    <string name="home">Home</string>
    <string name="balanceInfo">Informasi Saldo</string>
    <string name="mutation">Mutasi Rekening</string>
    <string name="transfer">Transfer</string>
    <string name="buying">Pembelian Pulsa</string>
    <string name="history">Histori Rekening</string>
    <string name="setting">Pengaturan akun</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="noRekening">Nomor Rekening: </string>
    <string name="noHp">Nomor HP: </string>
    <string name="nominal">Nominal: </string>
    <string name="jumlah">Jumlah: </string>
    <string name="provider">Provider</string>
    <string name="changePwd"><u>Ubah Password</u></string>
    <string name="changeCode"><u>Ubah Kode Rahasia</u></string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="ket">Keterangan: </string>
    <string name="code">Kode Rahasia: </string>
    <string name="newPass">Password baru: </string>
    <string name="oldPass">Password sekarang: </string>
    <string name="rePass">Re-type password: </string>
    <string name="newCode">Kode baru: </string>
    <string name="oldCode">Kode sekarang: </string>
    <string name="reCode">Re-type Kode: </string>
    <string name="new_rekening"><u>Buka Rekening</u></string>
    <string name="name">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="ktp">Nomor KTP</string>
    <string name="birthday">Tanggal Lahir</string>
    <string name="address">Alamat</string>
    <string name="secCode">Kode Rahasia</string>
    <string name="newRekDone">Terima kasih telah membuka rekening baru</string>
    <string name="uName">Username Anda</string>
    <string name="ok">OK</string>
</resources>
