<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/nav_balance"
            android:title="@string/balanceInfo"
            android:icon="@drawable/ic_balance"/>

        <item
            android:id="@+id/nav_mutation"
            android:title="@string/mutation"
            android:icon="@drawable/ic_mutation"/>

        <item
            android:id="@+id/nav_transfer"
            android:title="@string/transfer"
            android:icon="@drawable/ic_transfer"/>

        <item
            android:id="@+id/nav_buying"
            android:title="@string/buying"
            android:icon="@drawable/ic_buying"/>

        <item
            android:id="@+id/nav_history"
            android:title="@string/history"
            android:icon="@drawable/ic_history"/>

        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_setting"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>