<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="15sp"
        android:fontFamily="casual"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/txtUname_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="casual"
        android:textSize="15sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/txtPwd_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:background="@drawable/background_button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtNewRekening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_rekening"
        android:fontFamily="casual"
        android:textSize="15sp"
        android:textColor="#0000ff"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textStyle="bold"/>

</LinearLayout>